--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Raleway:wght@100;200;300;400&display=swap');
-
-
-
-
 /*-------------------------------------------------------Nav/header */
-
 /*.logo {
     background: url('../images/habiba\ logo.png');
     background-position: center;
@@ -15,22 +10,27 @@
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
 }*/
-
+* {
+    font-size: 10px;
+}
+body {
+    font-size: 1.6rem;
+}
 nav {
     background: #EDBBE3;
 }
-
+.nav-link {
+    font-size: 1.6rem;
+}
 .navbar-left img {
-    max-height: 150px;
+    max-height: 15rem;
     background-repeat: no-repeat;
     background-size: cover;
     display: inline;
 }
-
 .navbar-light .navbar-toggler {
     border: none;
 }
-
 .navbar-toggler {
     padding: .25rem .75rem;
     font-size: 2em;
@@ -39,110 +39,112 @@ nav {
     border: 1px solid transparent;
     border-radius: .25rem;
 }
-
-
 .navbar-toggler i:hover {
-    color:#EDC9C7;
+    color: #EDC9C7;
 }
-
 .title {
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
-    font-size: 46px;
-    margin-top: 50px;
+    font-size: 4.6rem;
+    margin-top: 5rem;
 }
-
 p {
     font-family: "Raleway", sans-serif;
     font-weight: 300;
-    font-size: 28;
+    font-size: 2.8rem;
 }
-
 /*-------------------------------------------- Body*/
-
 p {
     display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
 }
-
 .jumbotron #outnow {
     font-family: "Montserrat", sans-serif;
-    font-size:1.5em;
+    font-size: 1.5em;
     font-weight: 450;
     margin: 0;
-   
 }
 .jumbotron #listen {
     font-family: "Montserrat", sans-serif;
-    font-size:1em;
+    font-size: 1em;
     font-weight: 300;
     margin: 0;
-   
 }
 .jumbotron {
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding: .5rem 0;
 }
-
-
 /*-------------------------------------------------------Media */
-
-.iframe-container{
-  position: relative;
-  width: 100%;
-  padding-bottom: 56.25%; 
-  height: 0;
-  
+.iframe-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+    height: 0;
 }
-.iframe-container iframe{
-  position: absolute;
-  top:0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding-left: 5%;
-  padding-right: 5%;
-
+.iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
-
-#gal-photos{
-  clear: both;
-  line-height: 0;
-  column-count: 3;
-  column-gap: 0px;
-  padding-top: 10px;
+#gal-photos {
+    clear: both;
+    line-height: 0;
+    column-count: 3;
+    column-gap: 0;
+    padding-top: 1rem;
 }
-
-#gal-photos img{
-  width:100%;
+#gal-photos img {
+    width: 100%;
 }
-
-@media screen and (max-width:1393px) {
-    #gal-photos{
-        column-count: 5;
-    }
+#sign-up-modal {
+    font-size: 2rem;
+    min-height: 80vh;
 }
-
-@media screen and (max-width: 943px) { 
-    #gal-photos{
+.modal-content {
+    min-height: 60%;
+    text-align: center;
+}
+#nav-sign-btn {
+    background-color: white;
+}
+.btn-light {
+    background-color: #EDBBE3;
+    font-size: 1.5rem;
+}
+.footer-section {
+    background-color: #EDBBE3;
+    padding: 1.5rem;
+    margin-top: 2rem;
+}
+.social-media {
+    text-align: center;
+    font-size: 2rem;
+}
+#email-contact {
+    text-align: center;
+    text-decoration: none;
+}
+#email-contact a {
+    font-size: 1.5rem;
+}
+    /*------------------------------------------------------footer */
+footer h5 {
+    font-family: "Raleway", sans-serif;
+    font-weight: 400;
+}
+@media screen and (min-width: 800px) {
+    #gal-photos {
         column-count: 4;
     }
 }
-
-@media screen and (max-width: 800px) {
-  #gal-photos{
-    column-count: 3;
+@media screen and (min-width: 1200px) {
+    #gal-photos {
+        column-count: 5;
     }
-
-}
-
-
-/*------------------------------------------------------footer */
-
-footer h5 {
-    font-family: "Raleway";
-    font-weight: 400px;
 }
