--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,6 @@ p {
     font-weight: 300;
     font-size: 2.8rem;
 }
-/*-------------------------------------------- Body*/
 p {
     display: block;
     margin-block-start: 1em;
@@ -76,7 +75,7 @@ p {
 .jumbotron {
     padding: .5rem 0;
 }
-/*-------------------------------------------------------Media */
+/* insert ref here  */
 .iframe-container {
     position: relative;
     width: 100%;
@@ -133,7 +132,9 @@ p {
 #email-contact a {
     font-size: 1.5rem;
 }
-    /*------------------------------------------------------footer */
+i {
+    background-color: #feffea;
+}
 footer h5 {
     font-family: "Raleway", sans-serif;
     font-weight: 400;
