--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Raleway:wght@100;200;300;400&display=swap');
 /*-------------------------------------------------------Nav/header */
-/*.logo {
-    background: url('../images/habiba\ logo.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 200px;
-    transition: all .5s ease-in-out;
-    -moz-transition: all .5s ease-in-out;
-    -webkit-transition: all .5s ease-in-out;
-}*/
 * {
     font-size: 10px;
 }
 body {
     font-size: 1.6rem;
+    font-family: "Raleway", sans-serif;
 }
 nav {
     background: #EDBBE3;
 }
 .nav-link {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
+}
+.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+    color: rgba(245,245,245,1);
+}
+.navbar-light .navbar-nav .nav-link {
+    color: rgba(114,110,117,.7);
+}
+.navbar-toggler-icon {
+    display: inline-block;
+    width: 3.5em;
+    height: 1.5em;
+    vertical-align: middle;
+    font-size: 2rem;
 }
 .navbar-left img {
-    max-height: 15rem;
+    max-height: 12.5rem;
     background-repeat: no-repeat;
     background-size: cover;
     display: inline;
@@ -46,7 +50,7 @@ nav {
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 4.6rem;
-    margin-top: 5rem;
+    margin-top: 1rem;
 }
 p {
     font-family: "Raleway", sans-serif;
@@ -62,19 +66,29 @@ p {
 }
 .jumbotron #outnow {
     font-family: "Montserrat", sans-serif;
-    font-size: 1.5em;
-    font-weight: 450;
+    font-size: 1.5rem;
+    font-weight: 300;
     margin: 0;
 }
 .jumbotron #listen {
     font-family: "Montserrat", sans-serif;
-    font-size: 1em;
-    font-weight: 300;
+    font-size: 1rem;
+    font-weight: 400;
     margin: 0;
 }
 .jumbotron {
     padding: .5rem 0;
-    color: #726e75;
+    color: #F5F5F5;
+    margin-bottom: 2rem;
+    background-color:#726E75 ;
+}
+.jumbotron a {
+    font-size: 1.5rem;
+    color:#F5F5F5;
+}
+.jumbotron a:hover {
+    color:#EEBBE4;
+    text-decoration:none;
 }
 /* insert ref here  */
 .iframe-container {
